[package]
name = "cfg"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joseph Diza <josephm.diza@gmail.com>"]
repository = "https://github.com/jmdaemon/cfg"
homepage = "https://github.com/jmdaemon/cfg"
description = "Manage project configuration files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = { version = "5.0.1", optional = true}

[features]
default = [ "directories" ]
directories = [ "dep:directories" ]
